<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailed_movie_item"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailed_poster_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/no_image_available" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="vertical"
                android:layout_toRightOf="@id/detailed_poster_image">

                <TextView
                    android:id="@+id/detailed_movie_title_text"
                    style="@style/DetailedMovieText"
                    tools:text="@string/detailed_movie_title_text"
                    android:textSize="@dimen/movie_detailed_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/detailed_movie_tagline_text"
                    style="@style/DetailedMovieText"
                    tools:text="@string/detailed_movie_tagline_text"
                    android:textColor="@color/color_black"/>

                <TextView
                    android:id="@+id/detailed_movie_status_text"
                    style="@style/DetailedMovieText"
                    tools:text="@string/detailed_movie_status_text"
                    android:textColor="@color/color_black"/>

                <TextView
                    android:id="@+id/detailed_movie_rating_text"
                    style="@style/DetailedMovieText"
                    tools:text="@string/detailed_movie_rating_text"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/color_black"/>

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DetailedMovieScrollViewTitleText"
                    android:text="@string/languages_title"/>

                <TextView
                    android:id="@+id/detailed_movie_languages_text"
                    style="@style/DetailedMovieScrollViewContentText"
                    tools:text="@string/detailed_movie_languages_text"/>

                <TextView
                    style="@style/DetailedMovieScrollViewTitleText"
                    android:text="@string/genres_title"
                    />

                <TextView
                    android:id="@+id/detailed_movie_genres_text"
                    style="@style/DetailedMovieScrollViewContentText"
                    tools:text="@string/detailed_movie_genres_text"/>

                <TextView
                    style="@style/DetailedMovieScrollViewTitleText"
                    android:text="@string/release_date_title"/>

                <TextView
                    android:id="@+id/detailed_movie_release_date_text"
                    style="@style/DetailedMovieScrollViewContentText"
                    tools:text="@string/detailed_movie_release_date_text"/>

                <TextView
                    style="@style/DetailedMovieScrollViewTitleText"
                    android:text="@string/overview_title"/>

                <TextView
                    android:id="@+id/detailed_movie_overview_text"
                    style="@style/DetailedMovieScrollViewContentText"
                    tools:text="@string/detailed_movie_overview_text"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/detailed_progress_bar"
        style="@style/ProgressBar"/>

</RelativeLayout>